# trajectory_plan

./: README.md
cube_publisher/: CMakeLists.txt  package.xml
cube_publisher/launch/: cube_publisher.launch
cube_publisher/src/: cube_publisher.cpp
trajectory_plan/: CMakeLists.txt  package.xml
trajectory_planner/: CMakeLists.txt  package.xml
trajectory_planner/config/: joint_trajectory_controllers.yaml  trajectory_planner.rviz  trajectory_planner.yaml
trajectory_planner/include/trajectory_planner/: JerkMinimizationObjective.h  trajectory_planner.h
trajectory_planner/launch/: trajectory_planner_with_contollers.launch  trajectory_planner_with_gui.launch
trajectory_planner/launch/include/: joint_state_controller.launch  trajectory_planner.launch
trajectory_planner/src/: trajectory_planner.cpp
trajectory_planner_rqt/: CMakeLists.txt  package.xml  plugin.xml  setup.py
trajectory_planner_rqt/launch/: rqt_trajectory_planner.launch
trajectory_planner_rqt/resource/: trajectory_planner_rqt.ui
trajectory_planner_rqt/src/trajectory_planner_rqt/: trajectory_planner_rqt.py
